--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "my-app",
+  "name": "error_mongodb",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3000 --hostname 0.0.0.0",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start --port 3000 --hostname 0.0.0.0",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.1.0",
-    "nextjs": "^0.0.3",
-    "react": "^18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^3.4.1"
+    "mongoose": "^8.8.1",
+    "next": "^15.0.3",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
-    "@types/node": "^20.11.6",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
-    "typescript": "^5.3.3"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
