--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongoose": "^8.8.1",
     "next": "^15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -23,5 +24,13 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "html-react-parser": {
+      "react": "19.0.0-rc-66855b96-20241106"
+    },
+    "swr": {
+      "react": "19.0.0-rc-66855b96-20241106"
+    }
   }
 }
