--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/lib/connectDB.js", "src/lib/connectDB.js", "src/components/charts.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/lib/connectDB.js", "src/lib/connectDB.js", "src/app/charts/[ano]/charts.js"],
   "exclude": ["node_modules"]
 }
