--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.1.0",
+    "disconnect": "^1.2.2",
     "mongoose": "^8.8.1",
     "next": "^15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
