--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@twa-dev/sdk": "^8.0.1",
     "@vercel/speed-insights": "^1.1.0",
     "disconnect": "^1.2.2",
     "last-fm": "^5.3.0",
