--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "last-fm": "^5.3.0",
     "lastfm": "^0.9.4",
     "mongoose": "^8.8.1",
+    "musicbrainz": "^0.2.7",
+    "musicbrainz-api": "^0.19.1",
     "next": "^15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
