--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "musicbrainz": "^0.2.7",
     "musicbrainz-api": "^0.19.1",
     "next": "^15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.0.0-rc-66855b96-20241106",
+    "react-dom": "^19.0.0-rc-66855b96-20241106",
     "swr": "^2.2.5"
   },
   "devDependencies": {
