--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "mongoose": "^8.8.1",
     "musicbrainz": "^0.2.7",
     "musicbrainz-api": "^0.19.1",
-    "next": "^15.0.3",
-    "react": "^19.0.0-rc-66855b96-20241106",
+    "next": "^15.5.3",
+    "react": "^19.1.1",
     "react-dom": "^19.0.0-rc-66855b96-20241106",
     "swr": "^2.2.5"
   },
