--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "musicbrainz-api": "^0.19.1",
     "next": "^15.5.3",
     "react": "^19.1.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.1",
     "swr": "^2.3.6"
   },
   "devDependencies": {
@@ -35,7 +35,7 @@
   },
   "overrides": {
     "html-react-parser": {
-      "react": "19.0.0"
+      "react": "19.0.0-rc-66855b96-20241106"
     },
     "swr": {
       "react": "19.0.0"
