--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "musicbrainz-api": "^0.19.1",
     "next": "^15.5.3",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "swr": "^2.3.6"
   },
   "devDependencies": {
@@ -38,7 +38,7 @@
       "react": "19.0.0-rc-66855b96-20241106"
     },
     "swr": {
-      "react": "19.0.0"
+      "react": "^16.11.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
     }
   }
 }
